<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    tools:context="com.slashmobility.bottleflip_android.fragments.RegisterMainFragment">


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="172dp"
        android:layout_height="132dp"
        android:layout_marginTop="46dp"
        app:layout_constraintRight_toLeftOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_login_logo_blue" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:srcCompat="@drawable/img_signup_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="73dp"
        android:text="@string/complete_your_account"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xnormal2"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/include_code"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xnormal2"
        android:layout_marginRight="29dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginEnd="29dp" />

    <EditText
        android:id="@+id/edittextBottleCode"
        style="@style/EditText.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="32dp"
        android:maxLength="30"
        android:background="@drawable/edittext_shape_transparentbackground_whiteline"
        android:ems="10"
        android:hint="@string/bottle_code"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_lg_radius"
        android:text="@string/text_continue"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/text_size_xxnormal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextBottleCode" />


    <TextView
        android:id="@+id/textviewContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/continue_without_code"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />




</android.support.constraint.ConstraintLayout>
