<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.slashmobility.bottleflip_android.fragments.LinkCodeFragment">

    <include layout="@layout/toolbarlayout" android:id="@+id/toolbarlayout"


        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InvalidId"></include>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/text_link_bottle"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xnormal2"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/edittextBottleCode"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/include_code"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xnormal2"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/edittextBottleCode" />

    <EditText
        android:id="@+id/edittextBottleCode"
        style="@style/EditText.Orange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:maxLength="30"
        android:ems="10"
        android:hint="@string/bottle_code"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_lg_radius"
        android:text="@string/text_continue"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xxnormal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextBottleCode" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />


</android.support.constraint.ConstraintLayout>
