<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slashmobility.bottleflip_android.fragments.LinkUserCodeFragment">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/toolbarlayout"
                layout="@layout/toolbarlayout"


                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="InvalidId"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"></include>

            <EditText
                android:id="@+id/edittextPassword"
                style="@style/EditText.Orange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="30"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittextUser" />

            <EditText
                android:id="@+id/edittextEmail"
                style="@style/EditText.Orange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittextPassword" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                tools:layout_editor_absoluteY="73dp"
                tools:layout_editor_absoluteX="206dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                android:text="@string/create_user_label"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_xnormal2"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/edittextUser"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="25dp"
                android:text="@string/link_user_instruction"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_xnormal2"
                app:layout_constraintLeft_toLeftOf="@+id/textView3"
                app:layout_constraintRight_toRightOf="@+id/edittextUser"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/edittextUser"
                style="@style/EditText.Orange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/user"
                android:inputType="textPersonName"
                android:maxLength="30"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_lg_radius"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xxnormal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittextEmail" />

            <Button
                android:id="@+id/btnRegisterFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_shape_facebookbackground"
                android:text="@string/facebook_login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xxnormal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />



        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
