<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    tools:context="com.slashmobility.bottleflip_android.activities.RegisterActivity">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_logo_register"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageView15"
        android:layout_marginRight="37dp"
        app:layout_constraintHorizontal_bias="0.076"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="37dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_signup_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="21dp"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="25dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_register"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="73dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/text_register_subtitle"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginLeft="-64dp"
        android:layout_marginTop="22dp"
        android:text="@string/text_register_subtitle"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.131" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_continua"
        android:textColor="@color/blue"
        android:background="@drawable/button_lg_radius"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editText"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.529" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_uncode"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/btn_continue"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_continue" />

    <EditText
        android:id="@+id/editText"
        android:hint="@string/buttle_code"
        style="@style/EditText.White"
        android:layout_width="@dimen/width_btn_register"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/text_register_subtitle"
        app:layout_constraintRight_toRightOf="@+id/text_register_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/text_register_subtitle" />
</android.support.constraint.ConstraintLayout>
