<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    tools:context="com.slashmobility.bottleflip_android.fragments.RegisterMailFragment">

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape_whitebackground_whiteline"
        android:text="@string/text_continue"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/text_size_xxnormal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextEmail" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="206dp"
        app:layout_constraintGuide_begin="206dp" />

    <EditText
        android:id="@+id/edittextPassword"
        style="@style/EditText.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edittextUsername" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="172dp"
        android:layout_height="132dp"
        android:layout_marginTop="46dp"
        app:layout_constraintRight_toLeftOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_login_logo_blue" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:srcCompat="@drawable/img_signup_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        android:layout_marginStart="50dp" />


    <EditText
        android:id="@+id/edittextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        style="@style/EditText.White"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        app:layout_constraintTop_toTopOf="@+id/guideline6"
        android:layout_marginTop="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41"
        tools:layout_editor_absoluteY="213dp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edittextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        style="@style/EditText.White"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextPassword"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />


</android.support.constraint.ConstraintLayout>
