<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    tools:context="com.slashmobility.bottleflip_android.fragments.RegisterOptionsFragment">


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="172dp"
        android:layout_height="132dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="46dp"
        app:layout_constraintRight_toLeftOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_login_logo_blue" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:srcCompat="@drawable/img_signup_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/btnRegisterMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/button_shape_whitebackground_whiteline"
        android:text="@string/register_with_mail"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/text_size_xxnormal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnRegisterFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"

        android:background="@drawable/button_shape_facebookbackground"
        android:text="@string/register_with_facebook"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xxnormal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterMail" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/terms_and_conditions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


</android.support.constraint.ConstraintLayout>
